# src/routes/weather.js
@@ -1,13 +1,12 @@
 const express = require('express');
 const weather = require('../models/Weather');
 const responseFormatter = require('../utils/responseFormatter');
-const countryValidator = require('../middlewares/countryValidator');
+const countryAndCityValidator = require('../middlewares/countryAndCityValidator');
 
 const router = express.Router();
 
-router.get('country/:cc/city/:city', countryValidator, (req, res, next) => {
-  const { cc, city } = req.params;
-  const weatherType = req.query.weatherType;
+router.get('/', countryAndCityValidator, (req, res, next) => {
+  const { cc, city, weatherType } = req.query;
   weather
     .getData(city, cc, weatherType)
     .then(response => responseFormatter(res, 200, null, response))
